compiler/plc_rowan_parser/src/grammar/snapshots/plc_rowan_parser__grammar__statement_grammar__tests__parse_assignment_snapshot.snap
---
source: compiler/plc_rowan_parser/src/grammar/statement_grammar.rs
expression: "parse_body(\"x := 42;\")"
---
BODY
  EXPRESSION_STMT
    ASSIGNMENT
      NAME
        IDENT "x"
      ASSIGN ":="
      EXPRESSION_STMT
        LITERAL
          INT_NUMBER "42"
    SEMICOLON ";"
