compiler/plc_rowan_parser/src/grammar/snapshots/plc_rowan_parser__grammar__statement_grammar__tests__parse_call_named_args.snap
---
source: compiler/plc_rowan_parser/src/grammar/statement_grammar.rs
expression: "parse_body(\"TMR(IN := 5, PT := x);\")"
---
BODY
  EXPRESSION_STMT
    CALL_STATEMENT
      NAME_REF
        IDENT "TMR"
      L_PAREN "("
      ARGUMENT_LIST
        ARGUMENT
          NAME
            IDENT "IN"
          ASSIGN ":="
          EXPRESSION_STMT
            LITERAL
              INT_NUMBER "5"
        COMMA ","
        ARGUMENT
          NAME
            IDENT "PT"
          ASSIGN ":="
          EXPRESSION_STMT
            NAME_REF
              IDENT "x"
      R_PAREN ")"
    SEMICOLON ";"
