compiler/plc_rowan_parser/src/grammar/snapshots/plc_rowan_parser__grammar__statement_grammar__tests__parse_call_no_args.snap
---
source: compiler/plc_rowan_parser/src/grammar/statement_grammar.rs
expression: "parse_body(\"reset();\")"
---
BODY
  EXPRESSION_STMT
    CALL_STATEMENT
      NAME_REF
        IDENT "reset"
      L_PAREN "("
      R_PAREN ")"
    SEMICOLON ";"
