compiler/plc_rowan_parser/src/grammar/snapshots/plc_rowan_parser__grammar__statement_grammar__tests__parse_case_with_else_snapshot.snap
---
source: compiler/plc_rowan_parser/src/grammar/statement_grammar.rs
expression: "parse_body(\"CASE x OF\\n\\\n             1:\\n\\\n             \\ta := 1;\\n\\\n             ELSE\\n\\\n             \\ta := 0;\\n\\\n             END_CASE\")"
---
BODY
  EXPRESSION_STMT
    CASE_STATEMENT
      CASE_KW "CASE"
      EXPRESSION_STMT
        NAME_REF
          IDENT "x"
      OF_KW "OF"
      CASE_ARM
        EXPRESSION_LIST
          LITERAL
            INT_NUMBER "1"
        COLON ":"
        BODY
          EXPRESSION_STMT
            ASSIGNMENT
              NAME
                IDENT "a"
              ASSIGN ":="
              EXPRESSION_STMT
                LITERAL
                  INT_NUMBER "1"
            SEMICOLON ";"
      ELSE_ARM
        ELSE_KW "ELSE"
        EXPRESSION_STMT
          ASSIGNMENT
            NAME
              IDENT "a"
            ASSIGN ":="
            EXPRESSION_STMT
              LITERAL
                INT_NUMBER "0"
          SEMICOLON ";"
      END_CASE_KW "END_CASE"
