compiler/plc_rowan_parser/src/grammar/snapshots/plc_rowan_parser__grammar__statement_grammar__tests__parse_literal_int.snap
---
source: compiler/plc_rowan_parser/src/grammar/statement_grammar.rs
expression: "parse_body(\"42;\")"
---
BODY
  EXPRESSION_STMT
    LITERAL
      INT_NUMBER "42"
    SEMICOLON ";"
